apps/services/navidrome/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f apps/services/navidrome/docker-compose.yaml -o apps/services/navidrome/app
    kompose.version: 1.34.0 (HEAD)
  labels:
    io.kompose.service: navidrome
  name: navidrome
spec:
  ports:
    - name: "4533"
      port: 4533
      targetPort: 4533
  selector:
    io.kompose.service: navidrome
